--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@ h1 {
 	color: black;
 	font-size: 60px;
 	text-align: center;
-	text-decoration: underline;
+	border: 6px solid black;
+	width: 460px;
+	margin: 20px;
+	padding: 10px 0;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 body {
@@ -13,10 +18,15 @@ body {
 	font-family: 'Courier New';
 }
 
+.ul {
+	text-align: center;
+}
+
 ul {
 	font-size: 26px;
-	text-align: center;
 	list-style-position: inside;
+	display: inline-block;
+	text-align: left;
 }
 
 h2 {
